# Vst3SampleHost

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  LICENSE.txt  README.md  azure-pipelines.yml
Chapter01/: CMakeLists.txt
Chapter01/src/: App.cpp  App.hpp  prefix.hpp
Chapter01/src/file/: Config.cpp  ProjectFile.cpp  ProjectFile.hpp  Util.cpp  Util.hpp
Chapter01/src/gui/: Gui.cpp  Gui.hpp
Chapter01/src/misc/: StringAlgo.hpp
Chapter01/src/resource/: ResourceHelper.cpp  ResourceHelper.hpp
ChapterXX/: CMakeLists.txt
ChapterXX/gradle/: build.gradle
ChapterXX/src/: App.cpp  App.hpp
ChapterXX/src/device/: AudioDeviceManager.cpp  DeviceType.cpp  MidiDevice.hpp
ChapterXX/src/file/: ProjectFile.cpp
ChapterXX/src/gui/: AboutDialog.cpp  AboutDialog.hpp  Gui.cpp  Gui.hpp  PCKeyboardInput.cpp
ChapterXX/src/misc/: Algorithm.hpp  ListenerService.hpp  Range.hpp  StrCnv.cpp  TransitionalVolume.hpp
ChapterXX/src/plugin/vst3/: Vst3HostContext.cpp  Vst3Plugin.cpp  Vst3PluginFactory.cpp  Vst3PluginFactory.hpp  Vst3PluginImpl.cpp
ChapterXX/src/processor/: ProcessInfo.cpp
ChapterXX/src/test/: StringAlgoTest.cpp
cmake/: utils.cmake
data/: app_icon.icns
gradle/: build.gradle
src/: App.cpp  App.hpp  Resource.rc  Resource.rc.in  prefix.hpp
src/app/: App.cpp  App.hpp  AppConfig.cpp  AppConfig.hpp  NoteStatus.hpp  OscillatorType.hpp  TestSynth.cpp  TestSynth.hpp
src/config/: Config.cpp
src/device/: AudioDeviceManager.cpp  AudioDeviceManager.hpp  DeviceType.hpp  MidiDevice.hpp  MidiDeviceManager.cpp  MidiDeviceManager.hpp
src/file/: Config.cpp  Config.hpp  ProjectFile.cpp  ProjectFile.hpp  Util.cpp  Util.hpp
src/gui/: AboutDialog.cpp  AboutDialog.hpp  DeviceSettingDialog.cpp  DeviceSettingDialog.hpp  Gui.cpp  Gui.hpp  Keyboard.cpp  Keyboard.hpp  PCKeyboardInput.cpp  PCKeyboardInput.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginKeyEventHandler.cpp  PluginKeyEventHandler.h  PluginKeyEventHandler.mm  PluginViewType.hpp
src/log/: Logger.cpp  LoggingStrategy.cpp  LoggingSupport.hpp
src/misc/: Either.hpp  ListenerService.hpp  MathUtil.hpp  Range.hpp  StrCnv.cpp  StrCnv.hpp  StringAlgo.cpp  Transient.cpp  Transient.hpp
src/plugin/: PluginScanner.cpp  PluginScanner.hpp
src/plugin/vst3/: AudioBusesInfo.cpp  AudioBusesInfo.hpp  BusUtil.cpp  BusUtil.hpp  ClassInfo.cpp  ClassInfo.hpp  FactoryInfo.cpp  FactoryInfo.hpp  MidiBusesInfo.cpp  MidiBusesInfo.hpp  Vst3Debug.cpp  Vst3HostContext.cpp  Vst3HostContext.hpp  Vst3Plugin.cpp  Vst3Plugin.hpp  Vst3PluginFactory.cpp  Vst3PluginFactory.hpp  Vst3PluginImpl.cpp  Vst3PluginImpl.hpp  Vst3PluginImpl.mm  Vst3Utils.hpp  VstMAUtils.hpp
src/processor/: ProcessInfo.hpp  Processor.cpp
src/resource/: ResourceHelper.cpp  ResourceHelper.hpp
src/test/: StrCnvTest.cpp  TransientTest.cpp  Vst3PluginClassInfoTest.cpp
